--- a/task_manager/templates/tasks.html
+++ b/task_manager/templates/tasks.html
@@ -1,6 +1,8 @@
 {% extends "index.html" %}
 
 {% block content %}
+
+<div class="tasks-container">
 <h1>Tasks</h1>
 
 <form method="get">
@@ -45,4 +47,6 @@
 
 <br>
 <a href="/">Back to Home</a>
+
+</div>
 {% endblock %}
